--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# Compiled files
 build/
+
+# Dependency directory
 bower_components/
 node_modules/
+
+# Editor files
 *.sublime-*
+
+# Debug log from npm
+npm-debug.log
