--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "turntracker",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "A nodejs web app to track whose turn it is to do some task.",
   "main": "server.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "author": "geniusburger",
   "license": "Apache License 2.0",
@@ -14,8 +15,13 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
     "express": "^4.13.3",
-    "mysql": "^2.8.0"
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "mysql": "^2.8.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.3",
