--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "gulp serve"
   },
   "author": "geniusburger",
   "license": "Apache License 2.0",
@@ -14,6 +14,7 @@
     "url": "https://github.com/geniusburger/turntracker.git"
   },
   "dependencies": {
+    "bluebird": "^2.10.2",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
