--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "devDependencies": {
     "connect-livereload": "^0.5.3",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
     "gulp-live-server": "0.0.23",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "merge-stream": "^1.0.0",
     "minimist": "^1.1.3"
