--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -13,10 +13,12 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_login" >
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -26,6 +28,7 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_settings" >
         </activity>
     </application>
