--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.8.0",
-    "node-curl": "^0.3.3",
+    "node-libcurl": "^0.8.0",
     "qckwinsvc": "^1.0.0",
     "serve-favicon": "~2.3.0"
   },
