--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -37,21 +37,30 @@
         <activity android:name=".SettingsActivity" android:label="@string/title_activity_settings" android:screenOrientation="portrait" >
         </activity>
 
-        <!-- [START gcm_receiver] -->
         <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:name=".gcm.NotificationReceiver"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="gcm.play.android.samples.com.gcmquickstart" />
+                <action android:name="me.geniusburger.turntracker.NotificationReceiver" />
             </intent-filter>
         </receiver>
+
+        <!-- [START gcm_receiver] -->
+        <!--<receiver-->
+            <!--android:name="com.google.android.gms.gcm.GcmReceiver"-->
+            <!--android:exported="true"-->
+            <!--android:permission="com.google.android.c2dm.permission.SEND" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+                <!--<category android:name="gcm.play.android.samples.com.gcmquickstart" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
         <!-- [END gcm_receiver] -->
 
         <!-- [START gcm_listener] -->
         <service
-            android:name="me.geniusburger.turntracker.gcm.MyGcmListenerService"
+            android:name=".gcm.MyGcmListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -60,7 +69,7 @@
         <!-- [END gcm_listener] -->
         <!-- [START instanceId_listener] -->
         <service
-            android:name="me.geniusburger.turntracker.gcm.MyInstanceIDListenerService"
+            android:name=".gcm.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID"/>
@@ -68,7 +77,7 @@
         </service>
         <!-- [END instanceId_listener] -->
         <service
-            android:name="me.geniusburger.turntracker.gcm.RegistrationIntentService"
+            android:name=".gcm.RegistrationIntentService"
             android:exported="false">
         </service>
     </application>
