add dialogs to interact with user when writing and overwriting nfc tags

--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -26,13 +26,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
+                <!-- used for reading the "autoturn" tags -->
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:mimeType="text/plain" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash; not needed if we listen for technologies &ndash;&gt;-->
+                <!--<action android:name="android.nfc.action.TAG_DISCOVERED"/>-->
+            <!--</intent-filter>-->
         </activity>
         <activity android:name=".SettingsActivity" android:label="@string/title_activity_settings" android:screenOrientation="portrait" >
         </activity>
@@ -43,6 +45,26 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="me.geniusburger.turntracker.NotificationReceiver" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".nfc.TagReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <!-- used for reading the "autoturn" tags -->
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <!--<data android:mimeType="text/plain" />-->
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+            </intent-filter>
+            <meta-data android:name="android.nfc.action.TECH_DISCOVERED" android:resource="@xml/nfc_tech_filter" />
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
             </intent-filter>
         </receiver>
 
