--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <!-- [START gcm_permission] -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <permission android:name="me.geniusburger.turntracker.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="me.geniusburger.turntracker.permission.C2D_MESSAGE" />
     <!-- [END gcm_permission] -->
 
     <application
@@ -69,15 +71,15 @@
         </receiver>
 
         <!-- [START gcm_receiver] -->
-        <!--<receiver-->
-            <!--android:name="com.google.android.gms.gcm.GcmReceiver"-->
-            <!--android:exported="true"-->
-            <!--android:permission="com.google.android.c2dm.permission.SEND" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
-                <!--<category android:name="gcm.play.android.samples.com.gcmquickstart" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="me.geniusburger.turntracker" />
+            </intent-filter>
+        </receiver>
         <!-- [END gcm_receiver] -->
 
         <!-- [START gcm_listener] -->
