--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ server/config.js
 gcm-master.zip
 gcm-master/
 android/TurnTracker/app/google-services.json
+android/TurnTracker/projectFilesBackup/.idea/workspace.xml
