--- a/android/TurnTracker/app/build.gradle
+++ b/android/TurnTracker/app/build.gradle
@@ -1,31 +1,46 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+check.dependsOn 'assembleDebugAndroidTest'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "me.geniusburger.turntracker"
-        minSdkVersion 23
-        targetSdkVersion 25
+        minSdkVersion 24
+        targetSdkVersion 27
         versionCode 29
         versionName "0.3.5"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
+}
+
+repositories {
+    google()
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-gcm:9.8.00'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'org.apache.commons:commons-io:1.3.2'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    testImplementation 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
