--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -7,13 +7,6 @@
     <uses-permission android:name="android.permission.NFC" />
     <uses-feature android:name="android.hardware.nfc" android:required="false" />
 
-    <!-- [START gcm_permission] -->
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <permission android:name="me.geniusburger.turntracker.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-    <uses-permission android:name="me.geniusburger.turntracker.permission.C2D_MESSAGE" />
-    <!-- [END gcm_permission] -->
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -41,19 +34,13 @@
         <activity android:name=".SettingsActivity" android:label="@string/title_activity_settings" android:screenOrientation="portrait" >
         </activity>
 
-        <receiver
-            android:name=".gcm.NotificationReceiver"
-            android:enabled="true"
-            android:exported="false">
+        <receiver android:name=".fcm.NotificationReceiver" android:enabled="true" android:exported="false">
             <intent-filter>
                 <action android:name="me.geniusburger.turntracker.NotificationReceiver" />
             </intent-filter>
         </receiver>
 
-        <receiver
-            android:name=".nfc.TagReceiver"
-            android:enabled="true"
-            android:exported="true">
+        <receiver android:name=".nfc.TagReceiver" android:enabled="true" android:exported="true">
             <intent-filter>
                 <!-- used for reading the "autoturn" tags -->
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
@@ -70,39 +57,22 @@
             </intent-filter>
         </receiver>
 
-        <!-- [START gcm_receiver] -->
-        <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+        <!-- [START firebase_service] -->
+        <service android:name=".fcm.MyFcmListenerService">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="me.geniusburger.turntracker" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </receiver>
-        <!-- [END gcm_receiver] -->
+        </service>
+        <!-- [END firebase_service] -->
+        <!-- [START firebase_iid_service] -->
+        <service android:name=".fcm.MyInstanceIdListenerService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+        <!-- [END firebase_iid_service] -->
 
-        <!-- [START gcm_listener] -->
-        <service
-            android:name=".gcm.MyGcmListenerService"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            </intent-filter>
-        </service>
-        <!-- [END gcm_listener] -->
-        <!-- [START instanceId_listener] -->
-        <service
-            android:name=".gcm.MyInstanceIDListenerService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
-            </intent-filter>
-        </service>
-        <!-- [END instanceId_listener] -->
-        <service
-            android:name=".gcm.RegistrationIntentService"
-            android:exported="false">
+        <service android:name=".fcm.RegistrationIntentService" android:exported="false">
         </service>
     </application>
 
