ignore release apks

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ gcm-master.zip
 gcm-master/
 android/TurnTracker/app/google-services.json
 android/TurnTracker/projectFilesBackup/.idea/workspace.xml
+android/TurnTracker/app/release/
