--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ gcm-master/
 android/TurnTracker/app/google-services.json
 android/TurnTracker/projectFilesBackup/.idea/workspace.xml
 android/TurnTracker/app/release/
+android/TurnTracker/.idea/caches/build_file_checksums.ser
