--- a/android/TurnTracker/app/src/main/AndroidManifest.xml
+++ b/android/TurnTracker/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity android:name=".LoginActivity" android:label="@string/title_activity_login" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".MainActivity" android:label="@string/title_activity_main" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" >
+        <activity android:name=".MainActivity" android:label="@string/title_activity_main" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
