--- a/android/TurnTracker/app/build.gradle
+++ b/android/TurnTracker/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.android.support:support-compat:27.1.1'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.4'
     testImplementation 'junit:junit:4.12'
 }
 
