--- a/android/TurnTracker/app/build.gradle
+++ b/android/TurnTracker/app/build.gradle
@@ -9,15 +9,15 @@ android {
         applicationId "me.geniusburger.turntracker"
         minSdkVersion 24
         targetSdkVersion 27
-        versionCode 34
-        versionName "0.4.4"
+        versionCode 35
+        versionName "0.4.5"
     }
-    buildTypes {
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+//    buildTypes {
+//        release {
+//            minifyEnabled true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
